// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#ServiceInfo render correctly with data should render serviceInfo 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceInfo
    namespace="istio-system"
    service="reviews"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="container-fluid container-cards-pf"
        >
          <Row
            bsClass="row"
            className="row-cards-pf"
            componentClass="div"
          >
            <Col
              bsClass="col"
              componentClass="div"
              lg={12}
              md={12}
              sm={12}
              xs={12}
            >
              <ServiceInfoDescription
                created_at=""
                endpoints={undefined}
                health={undefined}
                ip=""
                istio_sidecar={false}
                labels={Map {}}
                name=""
                ports={Array []}
                type=""
              />
            </Col>
          </Row>
          <Row
            bsClass="row"
            className="row-cards-pf"
            componentClass="div"
          />
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={undefined}
                  health={undefined}
                  ip=""
                  istio_sidecar={false}
                  labels={Map {}}
                  name=""
                  ports={Array []}
                  type=""
                />
              </Col>
            </Row>,
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            />,
          ],
          "className": "container-fluid container-cards-pf",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bsClass": "row",
              "children": <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={undefined}
                  health={undefined}
                  ip=""
                  istio_sidecar={false}
                  labels={Map {}}
                  name=""
                  ports={Array []}
                  type=""
                />
              </Col>,
              "className": "row-cards-pf",
              "componentClass": "div",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "col",
                "children": <ServiceInfoDescription
                  created_at=""
                  endpoints={undefined}
                  health={undefined}
                  ip=""
                  istio_sidecar={false}
                  labels={Map {}}
                  name=""
                  ports={Array []}
                  type=""
                />,
                "componentClass": "div",
                "lg": 12,
                "md": 12,
                "sm": 12,
                "xs": 12,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "created_at": "",
                  "endpoints": undefined,
                  "health": undefined,
                  "ip": "",
                  "istio_sidecar": false,
                  "labels": Map {},
                  "name": "",
                  "ports": Array [],
                  "type": "",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bsClass": "row",
              "children": Array [
                false,
                false,
                false,
              ],
              "className": "row-cards-pf",
              "componentClass": "div",
            },
            "ref": null,
            "rendered": Array [
              false,
              false,
              false,
            ],
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="container-fluid container-cards-pf"
          >
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={undefined}
                  health={undefined}
                  ip=""
                  istio_sidecar={false}
                  labels={Map {}}
                  name=""
                  ports={Array []}
                  type=""
                />
              </Col>
            </Row>
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            />
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Row
                bsClass="row"
                className="row-cards-pf"
                componentClass="div"
              >
                <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={12}
                  xs={12}
                >
                  <ServiceInfoDescription
                    created_at=""
                    endpoints={undefined}
                    health={undefined}
                    ip=""
                    istio_sidecar={false}
                    labels={Map {}}
                    name=""
                    ports={Array []}
                    type=""
                  />
                </Col>
              </Row>,
              <Row
                bsClass="row"
                className="row-cards-pf"
                componentClass="div"
              />,
            ],
            "className": "container-fluid container-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "row",
                "children": <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={12}
                  xs={12}
                >
                  <ServiceInfoDescription
                    created_at=""
                    endpoints={undefined}
                    health={undefined}
                    ip=""
                    istio_sidecar={false}
                    labels={Map {}}
                    name=""
                    ports={Array []}
                    type=""
                  />
                </Col>,
                "className": "row-cards-pf",
                "componentClass": "div",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "bsClass": "col",
                  "children": <ServiceInfoDescription
                    created_at=""
                    endpoints={undefined}
                    health={undefined}
                    ip=""
                    istio_sidecar={false}
                    labels={Map {}}
                    name=""
                    ports={Array []}
                    type=""
                  />,
                  "componentClass": "div",
                  "lg": 12,
                  "md": 12,
                  "sm": 12,
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "created_at": "",
                    "endpoints": undefined,
                    "health": undefined,
                    "ip": "",
                    "istio_sidecar": false,
                    "labels": Map {},
                    "name": "",
                    "ports": Array [],
                    "type": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "row",
                "children": Array [
                  false,
                  false,
                  false,
                ],
                "className": "row-cards-pf",
                "componentClass": "div",
              },
              "ref": null,
              "rendered": Array [
                false,
                false,
                false,
              ],
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`#ServiceInfo render correctly with data should render serviceInfo with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ServiceInfo
    namespace="istio-system"
    service="reviews"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="container-fluid container-cards-pf"
        >
          <Row
            bsClass="row"
            className="row-cards-pf"
            componentClass="div"
          >
            <Col
              bsClass="col"
              componentClass="div"
              lg={12}
              md={12}
              sm={12}
              xs={12}
            >
              <ServiceInfoDescription
                created_at=""
                endpoints={
                  Array [
                    Object {
                      "addresses": Array [
                        Object {
                          "ip": "172.17.0.11",
                          "kind": "Pod",
                          "name": "reviews-v2-4140793682-qrpm9",
                        },
                        Object {
                          "ip": "172.17.0.14",
                          "kind": "Pod",
                          "name": "reviews-v3-3651831602-zn9g6",
                        },
                        Object {
                          "ip": "172.17.0.16",
                          "kind": "Pod",
                          "name": "reviews-v1-401049526-tfstp",
                        },
                      ],
                      "ports": Array [
                        Object {
                          "name": "http",
                          "port": 9080,
                          "protocol": "TCP",
                        },
                      ],
                    },
                  ]
                }
                health={undefined}
                ip="172.30.78.33"
                istio_sidecar={false}
                labels={
                  Object {
                    "app": "reviews",
                  }
                }
                name="reviews"
                ports={
                  Array [
                    Object {
                      "name": "http",
                      "port": 9080,
                      "protocol": "TCP",
                    },
                  ]
                }
                type="ClusterIP"
              />
            </Col>
          </Row>
          <Row
            bsClass="row"
            className="row-cards-pf"
            componentClass="div"
          >
            <Col
              bsClass="col"
              componentClass="div"
              lg={12}
              md={12}
              sm={6}
              xs={12}
            >
              <ServiceInfoRouteRules
                routeRules={
                  Array [
                    Object {
                      "destination": Object {
                        "name": "reviews",
                      },
                      "match": null,
                      "name": "reviews-default",
                      "precedence": 1,
                      "route": Array [
                        Object {
                          "labels": Object {
                            "version": "v1",
                          },
                        },
                      ],
                    },
                    Object {
                      "destination": Object {
                        "name": "reviews",
                      },
                      "match": Object {
                        "request": Object {
                          "headers": Object {
                            "cookie": Object {
                              "regex": "^(.*?;)?(user=jason)(;.*)?$",
                            },
                          },
                        },
                      },
                      "name": "reviews-test-v2",
                      "precedence": 2,
                      "route": Array [
                        Object {
                          "labels": Object {
                            "version": "v2",
                          },
                        },
                      ],
                    },
                  ]
                }
              />
            </Col>
          </Row>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={
                    Array [
                      Object {
                        "addresses": Array [
                          Object {
                            "ip": "172.17.0.11",
                            "kind": "Pod",
                            "name": "reviews-v2-4140793682-qrpm9",
                          },
                          Object {
                            "ip": "172.17.0.14",
                            "kind": "Pod",
                            "name": "reviews-v3-3651831602-zn9g6",
                          },
                          Object {
                            "ip": "172.17.0.16",
                            "kind": "Pod",
                            "name": "reviews-v1-401049526-tfstp",
                          },
                        ],
                        "ports": Array [
                          Object {
                            "name": "http",
                            "port": 9080,
                            "protocol": "TCP",
                          },
                        ],
                      },
                    ]
                  }
                  health={undefined}
                  ip="172.30.78.33"
                  istio_sidecar={false}
                  labels={
                    Object {
                      "app": "reviews",
                    }
                  }
                  name="reviews"
                  ports={
                    Array [
                      Object {
                        "name": "http",
                        "port": 9080,
                        "protocol": "TCP",
                      },
                    ]
                  }
                  type="ClusterIP"
                />
              </Col>
            </Row>,
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={6}
                xs={12}
              >
                <ServiceInfoRouteRules
                  routeRules={
                    Array [
                      Object {
                        "destination": Object {
                          "name": "reviews",
                        },
                        "match": null,
                        "name": "reviews-default",
                        "precedence": 1,
                        "route": Array [
                          Object {
                            "labels": Object {
                              "version": "v1",
                            },
                          },
                        ],
                      },
                      Object {
                        "destination": Object {
                          "name": "reviews",
                        },
                        "match": Object {
                          "request": Object {
                            "headers": Object {
                              "cookie": Object {
                                "regex": "^(.*?;)?(user=jason)(;.*)?$",
                              },
                            },
                          },
                        },
                        "name": "reviews-test-v2",
                        "precedence": 2,
                        "route": Array [
                          Object {
                            "labels": Object {
                              "version": "v2",
                            },
                          },
                        ],
                      },
                    ]
                  }
                />
              </Col>
            </Row>,
          ],
          "className": "container-fluid container-cards-pf",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bsClass": "row",
              "children": <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={
                    Array [
                      Object {
                        "addresses": Array [
                          Object {
                            "ip": "172.17.0.11",
                            "kind": "Pod",
                            "name": "reviews-v2-4140793682-qrpm9",
                          },
                          Object {
                            "ip": "172.17.0.14",
                            "kind": "Pod",
                            "name": "reviews-v3-3651831602-zn9g6",
                          },
                          Object {
                            "ip": "172.17.0.16",
                            "kind": "Pod",
                            "name": "reviews-v1-401049526-tfstp",
                          },
                        ],
                        "ports": Array [
                          Object {
                            "name": "http",
                            "port": 9080,
                            "protocol": "TCP",
                          },
                        ],
                      },
                    ]
                  }
                  health={undefined}
                  ip="172.30.78.33"
                  istio_sidecar={false}
                  labels={
                    Object {
                      "app": "reviews",
                    }
                  }
                  name="reviews"
                  ports={
                    Array [
                      Object {
                        "name": "http",
                        "port": 9080,
                        "protocol": "TCP",
                      },
                    ]
                  }
                  type="ClusterIP"
                />
              </Col>,
              "className": "row-cards-pf",
              "componentClass": "div",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "col",
                "children": <ServiceInfoDescription
                  created_at=""
                  endpoints={
                    Array [
                      Object {
                        "addresses": Array [
                          Object {
                            "ip": "172.17.0.11",
                            "kind": "Pod",
                            "name": "reviews-v2-4140793682-qrpm9",
                          },
                          Object {
                            "ip": "172.17.0.14",
                            "kind": "Pod",
                            "name": "reviews-v3-3651831602-zn9g6",
                          },
                          Object {
                            "ip": "172.17.0.16",
                            "kind": "Pod",
                            "name": "reviews-v1-401049526-tfstp",
                          },
                        ],
                        "ports": Array [
                          Object {
                            "name": "http",
                            "port": 9080,
                            "protocol": "TCP",
                          },
                        ],
                      },
                    ]
                  }
                  health={undefined}
                  ip="172.30.78.33"
                  istio_sidecar={false}
                  labels={
                    Object {
                      "app": "reviews",
                    }
                  }
                  name="reviews"
                  ports={
                    Array [
                      Object {
                        "name": "http",
                        "port": 9080,
                        "protocol": "TCP",
                      },
                    ]
                  }
                  type="ClusterIP"
                />,
                "componentClass": "div",
                "lg": 12,
                "md": 12,
                "sm": 12,
                "xs": 12,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "created_at": "",
                  "endpoints": Array [
                    Object {
                      "addresses": Array [
                        Object {
                          "ip": "172.17.0.11",
                          "kind": "Pod",
                          "name": "reviews-v2-4140793682-qrpm9",
                        },
                        Object {
                          "ip": "172.17.0.14",
                          "kind": "Pod",
                          "name": "reviews-v3-3651831602-zn9g6",
                        },
                        Object {
                          "ip": "172.17.0.16",
                          "kind": "Pod",
                          "name": "reviews-v1-401049526-tfstp",
                        },
                      ],
                      "ports": Array [
                        Object {
                          "name": "http",
                          "port": 9080,
                          "protocol": "TCP",
                        },
                      ],
                    },
                  ],
                  "health": undefined,
                  "ip": "172.30.78.33",
                  "istio_sidecar": false,
                  "labels": Object {
                    "app": "reviews",
                  },
                  "name": "reviews",
                  "ports": Array [
                    Object {
                      "name": "http",
                      "port": 9080,
                      "protocol": "TCP",
                    },
                  ],
                  "type": "ClusterIP",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bsClass": "row",
              "children": Array [
                false,
                false,
                <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={6}
                  xs={12}
                >
                  <ServiceInfoRouteRules
                    routeRules={
                      Array [
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": null,
                          "name": "reviews-default",
                          "precedence": 1,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v1",
                              },
                            },
                          ],
                        },
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": Object {
                            "request": Object {
                              "headers": Object {
                                "cookie": Object {
                                  "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                },
                              },
                            },
                          },
                          "name": "reviews-test-v2",
                          "precedence": 2,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v2",
                              },
                            },
                          ],
                        },
                      ]
                    }
                  />
                </Col>,
              ],
              "className": "row-cards-pf",
              "componentClass": "div",
            },
            "ref": null,
            "rendered": Array [
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "bsClass": "col",
                  "children": Array [
                    <ServiceInfoRouteRules
                      routeRules={
                        Array [
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": null,
                            "name": "reviews-default",
                            "precedence": 1,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v1",
                                },
                              },
                            ],
                          },
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": Object {
                              "request": Object {
                                "headers": Object {
                                  "cookie": Object {
                                    "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                  },
                                },
                              },
                            },
                            "name": "reviews-test-v2",
                            "precedence": 2,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v2",
                                },
                              },
                            ],
                          },
                        ]
                      }
                    />,
                    false,
                  ],
                  "componentClass": "div",
                  "lg": 12,
                  "md": 12,
                  "sm": 6,
                  "xs": 12,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "routeRules": Array [
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": null,
                          "name": "reviews-default",
                          "precedence": 1,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v1",
                              },
                            },
                          ],
                        },
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": Object {
                            "request": Object {
                              "headers": Object {
                                "cookie": Object {
                                  "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                },
                              },
                            },
                          },
                          "name": "reviews-test-v2",
                          "precedence": 2,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v2",
                              },
                            },
                          ],
                        },
                      ],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  false,
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="container-fluid container-cards-pf"
          >
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={12}
                xs={12}
              >
                <ServiceInfoDescription
                  created_at=""
                  endpoints={
                    Array [
                      Object {
                        "addresses": Array [
                          Object {
                            "ip": "172.17.0.11",
                            "kind": "Pod",
                            "name": "reviews-v2-4140793682-qrpm9",
                          },
                          Object {
                            "ip": "172.17.0.14",
                            "kind": "Pod",
                            "name": "reviews-v3-3651831602-zn9g6",
                          },
                          Object {
                            "ip": "172.17.0.16",
                            "kind": "Pod",
                            "name": "reviews-v1-401049526-tfstp",
                          },
                        ],
                        "ports": Array [
                          Object {
                            "name": "http",
                            "port": 9080,
                            "protocol": "TCP",
                          },
                        ],
                      },
                    ]
                  }
                  health={undefined}
                  ip="172.30.78.33"
                  istio_sidecar={false}
                  labels={
                    Object {
                      "app": "reviews",
                    }
                  }
                  name="reviews"
                  ports={
                    Array [
                      Object {
                        "name": "http",
                        "port": 9080,
                        "protocol": "TCP",
                      },
                    ]
                  }
                  type="ClusterIP"
                />
              </Col>
            </Row>
            <Row
              bsClass="row"
              className="row-cards-pf"
              componentClass="div"
            >
              <Col
                bsClass="col"
                componentClass="div"
                lg={12}
                md={12}
                sm={6}
                xs={12}
              >
                <ServiceInfoRouteRules
                  routeRules={
                    Array [
                      Object {
                        "destination": Object {
                          "name": "reviews",
                        },
                        "match": null,
                        "name": "reviews-default",
                        "precedence": 1,
                        "route": Array [
                          Object {
                            "labels": Object {
                              "version": "v1",
                            },
                          },
                        ],
                      },
                      Object {
                        "destination": Object {
                          "name": "reviews",
                        },
                        "match": Object {
                          "request": Object {
                            "headers": Object {
                              "cookie": Object {
                                "regex": "^(.*?;)?(user=jason)(;.*)?$",
                              },
                            },
                          },
                        },
                        "name": "reviews-test-v2",
                        "precedence": 2,
                        "route": Array [
                          Object {
                            "labels": Object {
                              "version": "v2",
                            },
                          },
                        ],
                      },
                    ]
                  }
                />
              </Col>
            </Row>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Row
                bsClass="row"
                className="row-cards-pf"
                componentClass="div"
              >
                <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={12}
                  xs={12}
                >
                  <ServiceInfoDescription
                    created_at=""
                    endpoints={
                      Array [
                        Object {
                          "addresses": Array [
                            Object {
                              "ip": "172.17.0.11",
                              "kind": "Pod",
                              "name": "reviews-v2-4140793682-qrpm9",
                            },
                            Object {
                              "ip": "172.17.0.14",
                              "kind": "Pod",
                              "name": "reviews-v3-3651831602-zn9g6",
                            },
                            Object {
                              "ip": "172.17.0.16",
                              "kind": "Pod",
                              "name": "reviews-v1-401049526-tfstp",
                            },
                          ],
                          "ports": Array [
                            Object {
                              "name": "http",
                              "port": 9080,
                              "protocol": "TCP",
                            },
                          ],
                        },
                      ]
                    }
                    health={undefined}
                    ip="172.30.78.33"
                    istio_sidecar={false}
                    labels={
                      Object {
                        "app": "reviews",
                      }
                    }
                    name="reviews"
                    ports={
                      Array [
                        Object {
                          "name": "http",
                          "port": 9080,
                          "protocol": "TCP",
                        },
                      ]
                    }
                    type="ClusterIP"
                  />
                </Col>
              </Row>,
              <Row
                bsClass="row"
                className="row-cards-pf"
                componentClass="div"
              >
                <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={6}
                  xs={12}
                >
                  <ServiceInfoRouteRules
                    routeRules={
                      Array [
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": null,
                          "name": "reviews-default",
                          "precedence": 1,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v1",
                              },
                            },
                          ],
                        },
                        Object {
                          "destination": Object {
                            "name": "reviews",
                          },
                          "match": Object {
                            "request": Object {
                              "headers": Object {
                                "cookie": Object {
                                  "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                },
                              },
                            },
                          },
                          "name": "reviews-test-v2",
                          "precedence": 2,
                          "route": Array [
                            Object {
                              "labels": Object {
                                "version": "v2",
                              },
                            },
                          ],
                        },
                      ]
                    }
                  />
                </Col>
              </Row>,
            ],
            "className": "container-fluid container-cards-pf",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "row",
                "children": <Col
                  bsClass="col"
                  componentClass="div"
                  lg={12}
                  md={12}
                  sm={12}
                  xs={12}
                >
                  <ServiceInfoDescription
                    created_at=""
                    endpoints={
                      Array [
                        Object {
                          "addresses": Array [
                            Object {
                              "ip": "172.17.0.11",
                              "kind": "Pod",
                              "name": "reviews-v2-4140793682-qrpm9",
                            },
                            Object {
                              "ip": "172.17.0.14",
                              "kind": "Pod",
                              "name": "reviews-v3-3651831602-zn9g6",
                            },
                            Object {
                              "ip": "172.17.0.16",
                              "kind": "Pod",
                              "name": "reviews-v1-401049526-tfstp",
                            },
                          ],
                          "ports": Array [
                            Object {
                              "name": "http",
                              "port": 9080,
                              "protocol": "TCP",
                            },
                          ],
                        },
                      ]
                    }
                    health={undefined}
                    ip="172.30.78.33"
                    istio_sidecar={false}
                    labels={
                      Object {
                        "app": "reviews",
                      }
                    }
                    name="reviews"
                    ports={
                      Array [
                        Object {
                          "name": "http",
                          "port": 9080,
                          "protocol": "TCP",
                        },
                      ]
                    }
                    type="ClusterIP"
                  />
                </Col>,
                "className": "row-cards-pf",
                "componentClass": "div",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "bsClass": "col",
                  "children": <ServiceInfoDescription
                    created_at=""
                    endpoints={
                      Array [
                        Object {
                          "addresses": Array [
                            Object {
                              "ip": "172.17.0.11",
                              "kind": "Pod",
                              "name": "reviews-v2-4140793682-qrpm9",
                            },
                            Object {
                              "ip": "172.17.0.14",
                              "kind": "Pod",
                              "name": "reviews-v3-3651831602-zn9g6",
                            },
                            Object {
                              "ip": "172.17.0.16",
                              "kind": "Pod",
                              "name": "reviews-v1-401049526-tfstp",
                            },
                          ],
                          "ports": Array [
                            Object {
                              "name": "http",
                              "port": 9080,
                              "protocol": "TCP",
                            },
                          ],
                        },
                      ]
                    }
                    health={undefined}
                    ip="172.30.78.33"
                    istio_sidecar={false}
                    labels={
                      Object {
                        "app": "reviews",
                      }
                    }
                    name="reviews"
                    ports={
                      Array [
                        Object {
                          "name": "http",
                          "port": 9080,
                          "protocol": "TCP",
                        },
                      ]
                    }
                    type="ClusterIP"
                  />,
                  "componentClass": "div",
                  "lg": 12,
                  "md": 12,
                  "sm": 12,
                  "xs": 12,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "created_at": "",
                    "endpoints": Array [
                      Object {
                        "addresses": Array [
                          Object {
                            "ip": "172.17.0.11",
                            "kind": "Pod",
                            "name": "reviews-v2-4140793682-qrpm9",
                          },
                          Object {
                            "ip": "172.17.0.14",
                            "kind": "Pod",
                            "name": "reviews-v3-3651831602-zn9g6",
                          },
                          Object {
                            "ip": "172.17.0.16",
                            "kind": "Pod",
                            "name": "reviews-v1-401049526-tfstp",
                          },
                        ],
                        "ports": Array [
                          Object {
                            "name": "http",
                            "port": 9080,
                            "protocol": "TCP",
                          },
                        ],
                      },
                    ],
                    "health": undefined,
                    "ip": "172.30.78.33",
                    "istio_sidecar": false,
                    "labels": Object {
                      "app": "reviews",
                    },
                    "name": "reviews",
                    "ports": Array [
                      Object {
                        "name": "http",
                        "port": 9080,
                        "protocol": "TCP",
                      },
                    ],
                    "type": "ClusterIP",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bsClass": "row",
                "children": Array [
                  false,
                  false,
                  <Col
                    bsClass="col"
                    componentClass="div"
                    lg={12}
                    md={12}
                    sm={6}
                    xs={12}
                  >
                    <ServiceInfoRouteRules
                      routeRules={
                        Array [
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": null,
                            "name": "reviews-default",
                            "precedence": 1,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v1",
                                },
                              },
                            ],
                          },
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": Object {
                              "request": Object {
                                "headers": Object {
                                  "cookie": Object {
                                    "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                  },
                                },
                              },
                            },
                            "name": "reviews-test-v2",
                            "precedence": 2,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v2",
                                },
                              },
                            ],
                          },
                        ]
                      }
                    />
                  </Col>,
                ],
                "className": "row-cards-pf",
                "componentClass": "div",
              },
              "ref": null,
              "rendered": Array [
                false,
                false,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "bsClass": "col",
                    "children": Array [
                      <ServiceInfoRouteRules
                        routeRules={
                          Array [
                            Object {
                              "destination": Object {
                                "name": "reviews",
                              },
                              "match": null,
                              "name": "reviews-default",
                              "precedence": 1,
                              "route": Array [
                                Object {
                                  "labels": Object {
                                    "version": "v1",
                                  },
                                },
                              ],
                            },
                            Object {
                              "destination": Object {
                                "name": "reviews",
                              },
                              "match": Object {
                                "request": Object {
                                  "headers": Object {
                                    "cookie": Object {
                                      "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                    },
                                  },
                                },
                              },
                              "name": "reviews-test-v2",
                              "precedence": 2,
                              "route": Array [
                                Object {
                                  "labels": Object {
                                    "version": "v2",
                                  },
                                },
                              ],
                            },
                          ]
                        }
                      />,
                      false,
                    ],
                    "componentClass": "div",
                    "lg": 12,
                    "md": 12,
                    "sm": 6,
                    "xs": 12,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "routeRules": Array [
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": null,
                            "name": "reviews-default",
                            "precedence": 1,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v1",
                                },
                              },
                            ],
                          },
                          Object {
                            "destination": Object {
                              "name": "reviews",
                            },
                            "match": Object {
                              "request": Object {
                                "headers": Object {
                                  "cookie": Object {
                                    "regex": "^(.*?;)?(user=jason)(;.*)?$",
                                  },
                                },
                              },
                            },
                            "name": "reviews-test-v2",
                            "precedence": 2,
                            "route": Array [
                              Object {
                                "labels": Object {
                                  "version": "v2",
                                },
                              },
                            ],
                          },
                        ],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    false,
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
